bd-32rw: stabilize CLI test timeouts

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "typecheck": "bun run --cwd apps/web typecheck",
     "format": "bun run --cwd apps/web format",
     "test": "bun run --cwd apps/web test",
-    "test:cli": "bun test jfp.test.ts packages/core/__tests__ packages/cli/__tests__",
-    "test:cli:coverage": "bun test --coverage --coverage-reporter=text --coverage-reporter=lcov --coverage-dir=coverage/cli jfp.test.ts packages/core/__tests__ packages/cli/__tests__",
+    "test:cli": "bun test --timeout=30000 jfp.test.ts packages/core/__tests__ packages/cli/__tests__",
+    "test:cli:coverage": "bun test --timeout=30000 --coverage --coverage-reporter=text --coverage-reporter=lcov --coverage-dir=coverage/cli jfp.test.ts packages/core/__tests__ packages/cli/__tests__",
     "test:e2e:cli": "bun test e2e/cli-workflow.test.ts",
     "test:e2e:web": "bunx playwright test --config e2e/playwright.config.ts",
     "test:e2e:web:ui": "bunx playwright test --config e2e/playwright.config.ts --ui",
