--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,8 @@ out/
 .vercel/
 
 # Compiled binaries
-jfp
-jfp-*
+/jfp
+/jfp-*
 *.exe
 
 # ------------------------------------------------------------------------------
