--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ desktop.ini
 # Logs & debugging
 # ------------------------------------------------------------------------------
 *.log
+core.*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
